--- a/config-dev.yml
+++ b/config-dev.yml
@@ -1,2 +1,2 @@
 config: 
-      info: "main branch version =1552 update at 1610 noew is 1702"
+      info: "main branch version =1552 update at 1610 noew is 1702  this is 1707"
